# doctor-genova

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python.yml
docs/: build.novella  mkdocs.yml
docs/content/: index.md  linking.md
doctor_genova/: __init__.py  _linking.py  api_page.py  backtick_preprocessor.py  docstring_backtick_processor.py  external_resolver.py  lib.py  nav.py  preprocessor.py  resolver.py  stdlib_resolver.py  templates.py
