[tool.poetry]
name = "doctor-genova"
version = "0.1.0a0"
description = "Generate and link API docs with pydoc-markdown (novella backend)"
authors = ["nrser <neil@neilsouza.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [
  {include = "doctor_genova"},
]
include = [
  "LICENSE"
]

[tool.poetry.urls]
Homepage = "https://github.com/nrser/doctor-genova"
Repository = "https://github.com/nrser/doctor-genova"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.8"

# These are _exact_ versions since we're using novella, which is unstable
pydoc-markdown = "4.6.3"
novella = "0.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
black = "^22.3.0"

[tool.poetry.plugins."novella.templates"]
dr_gen_mkdocs = "doctor_genova.templates:DrGenMkdocsTemplate"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
